docker compose change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,18 @@ services:
     depends_on:
       - db
     env_file:
-      - ./backend/.env
+      - ./.env
     volumes:
       - storage:/usr/share/nginx/html/storage:rw
       - public:/usr/share/nginx/html/public:rw
+    networks:
+      - dokploy-network
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.next-app.rule=Host(`laravel.nikasyraf.com`)
+      - traefik.http.routers.next-app.entrypoints=websecure
+      - traefik.http.routers.next-app.tls.certResolver=letsencrypt
+      - traefik.http.services.next-app.loadbalancer.server.port=9000
   queue-worker:
     build:
       context: ./backend
@@ -22,7 +30,7 @@ services:
     environment:
       IS_WORKER: "true"
     env_file:
-      - ./backend/.env
+      - ./.env
     depends_on:
       - db
       - redis
