docker compose change -5

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen       443;
-    server_name  localhost;
+    server_name  laravel.nikasyraf.com;
     root         /usr/share/nginx/html/public;
 
     access_log /dev/stdout;
