--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,7 @@ services:
       - 8000:8000 # This port is for internal Docker network communication
     depends_on:
       - db
+      - redis
     env_file:
       - ./.env
     volumes:
