--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,10 +110,10 @@ services:
       - dokploy-network
     labels:
       - traefik.enable=true
-      - traefik.http.routers.next-app.rule=Host(`laravel.nikasyraf.com`)
-      - traefik.http.routers.next-app.entrypoints=websecure
-      - traefik.http.routers.next-app.tls.certResolver=letsencrypt
-      - traefik.http.services.next-app.loadbalancer.server.port=8000 # Traefik forwards to app's port 9000
+      - traefik.http.routers.laravel-dock.rule=Host(`laravel.nikasyraf.com`)
+      - traefik.http.routers.laravel-dock.entrypoints=websecure
+      - traefik.http.routers.laravel-dock.tls.certResolver=letsencrypt
+      - traefik.http.services.laravel-dock.loadbalancer.server.port=8000 # Traefik forwards to app's port 9000
 
   queue-worker:
     build:
