--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -222,7 +222,7 @@ services:
     image: nginx:1-alpine
     ports:
       # Map an internal Nginx port to be accessible by Traefik on the network
-      - 80:80 # Example: map internal Nginx port 80 to port 80 on the network
+      # - 80:80 # Example: map internal Nginx port 80 to port 80 on the network
       # Remove the host port mapping as Traefik handles public access
       # - 8080:443
     volumes:
