--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,8 @@ services:
       # - 80:80
       - 443:443
     volumes:
-      - ./nginx.conf:/etc/nginx/templates/default.conf.template
+      # - ./nginx.conf:/etc/nginx/templates/default.conf.template
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - storage:/usr/share/nginx/html/storage:rw
       - public:/usr/share/nginx/html/public:ro
     networks:
