--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - storage:/usr/share/nginx/html/storage:rw
       - public:/usr/share/nginx/html/public:ro
+    depends_on:
+      - app
     networks:
       - dokploy-network
   db:
