--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - storage:/usr/share/nginx/html/storage:rw
       - public:/usr/share/nginx/html/public:rw
       # - ./backend:/usr/share/nginx/html
-      - ./.env:/usr/share/nginx/html/.env:ro
+      - ./.env:/usr/share/nginx/html/.env:rw
     networks:
       - dokploy-network
     # labels:
