--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - storage:/usr/share/nginx/html/storage:rw
       - public:/usr/share/nginx/html/public:rw
       # - ./backend:/usr/share/nginx/html
-      - ./.env:/usr/share/nginx/html/.env:rw
+      # - ./.env:/usr/share/nginx/html/.env:rw
     networks:
       - dokploy-network
     # labels:
@@ -45,7 +45,7 @@ services:
     image: nginx:1-alpine
     ports:
       # - 80:80
-      - 8080:8080
+      - 8080:8081
     volumes:
       # - ./nginx.conf:/etc/nginx/templates/default.conf.template
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
