--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.31",
+        "laravel/reverb": "^1.5",
         "laravel/tinker": "^2.9",
         "predis/predis": "^3.0"
     },
