--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,13 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.9",
         "concurrently": "^9.1.2",
+        "laravel-echo": "^2.1.0",
         "laravel-vite-plugin": "^1.2",
+        "pusher-js": "^8.4.0",
         "vite": "^6.0"
     },
     "dependencies": {
-        "tailwindcss": "^4.0.0",
-        "@tailwindcss/vite": "^4.0.0"
+        "@tailwindcss/vite": "^4.0.0",
+        "tailwindcss": "^4.0.0"
     }
 }
