--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     restart: unless-stopped
-    ports:
-      - 9000:9000
+    # ports:
+    #   - 9000:9000
     depends_on:
       - db
     env_file:
