--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "flowbite": "^3.1.2",
         "tailwindcss": "^4.0.0"
     }
 }
