--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen       8081;
-    server_name  laravel.nikasyraf.com;
+    server_name  127.0.0.1;
     root         /usr/share/nginx/html/public;
 
     access_log /dev/stdout;
@@ -26,5 +26,29 @@ server {
         include fastcgi.conf;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    location /app {
+
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $http_host;
+
+        proxy_set_header Scheme $scheme;
+
+        proxy_set_header SERVER_PORT $server_port;
+
+        proxy_set_header REMOTE_ADDR $remote_addr;
+
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_set_header Upgrade $http_upgrade;
+
+        proxy_set_header Connection "Upgrade";
+
+ 
+
+        proxy_pass http://reverb:8080;
+
     }
 }
