--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen       8081;
-    server_name  127.0.0.1;
+    server_name  laravel.nikasyraf.com;
     root         /usr/share/nginx/html/public;
 
     access_log /dev/stdout;
