--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,14 @@ services:
       - public:/usr/share/nginx/html/public:rw
     networks:
       - dokploy-network
+      - traefik.enable=true
+      - traefik.docker.network=dokploy-network
+      - traefik.http.routers.reverb.rule=Host(`laravel.nikasyraf.com`) && PathPrefix(`/app`)
+      - traefik.http.routers.reverb.entrypoints=websecure
+      - traefik.http.routers.reverb.tls.certresolver=letsencrypt
+      - traefik.http.services.reverb.loadbalancer.server.port=8080
+      - traefik.http.services.reverb.loadbalancer.server.scheme=http
+      - traefik.http.routers.reverb.service=reverb
   nginx:
     image: nginx:1-alpine
     ports:
