--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       - public:/usr/share/nginx/html/public:rw
     networks:
       - dokploy-network
+    labels:
       - traefik.enable=true
       - traefik.docker.network=dokploy-network
       - traefik.http.routers.reverb.rule=Host(`laravel.nikasyraf.com`) && PathPrefix(`/app`)
